force-app/main/default/objects/QCC_Loyalty_Status__e/QCC_Loyalty_Status__e.object-meta.xml
<CustomObject>
    <label>Loyalty Status</label>
    <pluralLabel>Loyalty Status</pluralLabel>
</CustomObject>