force-app/main/default/objects/QCC_Loyalty_Status__e/fields/aflTeams__c.field-meta.xml
<CustomField>
    <fullName>aflTeams__c</fullName>
    <label>AFL Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>