force-app/main/default/objects/QCC_Loyalty_Status__e/fields/artsAndCultures__c.field-meta.xml
<CustomField>
    <fullName>artsAndCultures__c</fullName>
    <label>Arts and Culture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>