force-app/main/default/objects/QCC_Loyalty_Status__e/fields/aviationEnvironmentAndCorporates__c.field-meta.xml
<CustomField>
    <fullName>aviationEnvironmentAndCorporates__c</fullName>
    <label>Aviation Environment and Corporates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>