force-app/main/default/objects/QCC_Loyalty_Status__e/fields/basketballTeams__c.field-meta.xml
<CustomField>
    <fullName>basketballTeams__c</fullName>
    <label>Basketball Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>