force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessCountryCode__c.field-meta.xml
<CustomField>
    <fullName>businessCountryCode__c</fullName>
    <label>Business Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>