force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>businessEmailAddress__c</fullName>
    <label>Business Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>