force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessLineTwo__c.field-meta.xml
<CustomField>
    <fullName>businessLineTwo__c</fullName>
    <label>Business Line Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>