force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessPhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>businessPhoneAreaCode__c</fullName>
    <label>Business Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>