force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessPhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>businessPhoneCountryCode__c</fullName>
    <label>Business Phone Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>