force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>businessPhoneNumber__c</fullName>
    <label>Business Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>