force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessPhoneType__c.field-meta.xml
<CustomField>
    <fullName>businessPhoneType__c</fullName>
    <label>Business Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>