force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessPostCode__c.field-meta.xml
<CustomField>
    <fullName>businessPostCode__c</fullName>
    <label>Business Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>