force-app/main/default/objects/QCC_Loyalty_Status__e/fields/businessSuburb__c.field-meta.xml
<CustomField>
    <fullName>businessSuburb__c</fullName>
    <label>Business Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>