force-app/main/default/objects/QCC_Loyalty_Status__e/fields/cabinClass__c.field-meta.xml
<CustomField>
    <fullName>cabinClass__c</fullName>
    <label>Cabin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>