force-app/main/default/objects/QCC_Loyalty_Status__e/fields/companyAbn__c.field-meta.xml
<CustomField>
    <fullName>companyAbn__c</fullName>
    <label>companyAbn</label>
    <length>18</length>
    <type>Text</type>
</CustomField>