force-app/main/default/objects/QCC_Loyalty_Status__e/fields/correlationId__c.field-meta.xml
<CustomField>
    <fullName>correlationId__c</fullName>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>