force-app/main/default/objects/QCC_Loyalty_Status__e/fields/dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dateOfBirth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>