force-app/main/default/objects/QCC_Loyalty_Status__e/fields/effectiveTier__c.field-meta.xml
<CustomField>
    <fullName>effectiveTier__c</fullName>
    <label>Effective Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>