force-app/main/default/objects/QCC_Loyalty_Status__e/fields/eventDate__c.field-meta.xml
<CustomField>
    <fullName>eventDate__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>