force-app/main/default/objects/QCC_Loyalty_Status__e/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>