force-app/main/default/objects/QCC_Loyalty_Status__e/fields/fashionAndDesigns__c.field-meta.xml
<CustomField>
    <fullName>fashionAndDesigns__c</fullName>
    <label>Fashion And Designs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>