force-app/main/default/objects/QCC_Loyalty_Status__e/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>