force-app/main/default/objects/QCC_Loyalty_Status__e/fields/foodAndWines__c.field-meta.xml
<CustomField>
    <fullName>foodAndWines__c</fullName>
    <label>Food And Wines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>