force-app/main/default/objects/QCC_Loyalty_Status__e/fields/homeCountryCode__c.field-meta.xml
<CustomField>
    <fullName>homeCountryCode__c</fullName>
    <label>Home Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>