force-app/main/default/objects/QCC_Loyalty_Status__e/fields/homePhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>homePhoneAreaCode__c</fullName>
    <label>Home Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>