force-app/main/default/objects/QCC_Loyalty_Status__e/fields/homePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>homePhoneNumber__c</fullName>
    <label>Home Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>