force-app/main/default/objects/QCC_Loyalty_Status__e/fields/homePhoneType__c.field-meta.xml
<CustomField>
    <fullName>homePhoneType__c</fullName>
    <label>Home Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>