force-app/main/default/objects/QCC_Loyalty_Status__e/fields/homePostCode__c.field-meta.xml
<CustomField>
    <fullName>homePostCode__c</fullName>
    <label>Home Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>