force-app/main/default/objects/QCC_Loyalty_Status__e/fields/internationalRugbyUnionTeams__c.field-meta.xml
<CustomField>
    <fullName>internationalRugbyUnionTeams__c</fullName>
    <label>International Rugby Union Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>