force-app/main/default/objects/QCC_Loyalty_Status__e/fields/inviteToEventDuringTravel__c.field-meta.xml
<CustomField>
    <fullName>inviteToEventDuringTravel__c</fullName>
    <label>Invite To Event During Travel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>