force-app/main/default/objects/QCC_Loyalty_Status__e/fields/inviteToEventsOtherCities__c.field-meta.xml
<CustomField>
    <fullName>inviteToEventsOtherCities__c</fullName>
    <label>Invite To Events Other Cities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>