force-app/main/default/objects/QCC_Loyalty_Status__e/fields/mealPreferencesInternational__c.field-meta.xml
<CustomField>
    <fullName>mealPreferencesInternational__c</fullName>
    <label>Meal Preferences International</label>
    <length>255</length>
    <type>Text</type>
</CustomField>