force-app/main/default/objects/QCC_Loyalty_Status__e/fields/memberId__c.field-meta.xml
<CustomField>
    <fullName>memberId__c</fullName>
    <label>Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>