force-app/main/default/objects/QCC_Loyalty_Status__e/fields/mobilePhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>mobilePhoneAreaCode__c</fullName>
    <label>Mobile Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>