force-app/main/default/objects/QCC_Loyalty_Status__e/fields/mobilePhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>mobilePhoneCountryCode__c</fullName>
    <label>Mobile Phone Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>