force-app/main/default/objects/QCC_Loyalty_Status__e/fields/notificationPhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>notificationPhoneAreaCode__c</fullName>
    <label>Notification Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>