force-app/main/default/objects/QCC_Loyalty_Status__e/fields/notificationPhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>notificationPhoneCountryCode__c</fullName>
    <label>Notification Phone Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>