force-app/main/default/objects/QCC_Loyalty_Status__e/fields/notificationPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>notificationPhoneNumber__c</fullName>
    <label>Notification Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>