force-app/main/default/objects/QCC_Loyalty_Status__e/fields/notificationPhoneType__c.field-meta.xml
<CustomField>
    <fullName>notificationPhoneType__c</fullName>
    <label>Notification Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>