force-app/main/default/objects/QCC_Loyalty_Status__e/fields/p1BonusRewardAlert__c.field-meta.xml
<CustomField>
    <fullName>p1BonusRewardAlert__c</fullName>
    <label>p1BonusRewardAlert</label>
    <length>10</length>
    <type>Text</type>
</CustomField>