force-app/main/default/objects/QCC_Loyalty_Status__e/fields/preferredAddress__c.field-meta.xml
<CustomField>
    <fullName>preferredAddress__c</fullName>
    <label>Preferred Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>