force-app/main/default/objects/QCC_Loyalty_Status__e/fields/previousTier__c.field-meta.xml
<CustomField>
    <fullName>previousTier__c</fullName>
    <label>Previous Tier</label>
    <length>4</length>
    <type>Text</type>
</CustomField>