force-app/main/default/objects/QCC_Loyalty_Status__e/fields/pyjamasSizeBusinessClassType__c.field-meta.xml
<CustomField>
    <fullName>pyjamasSizeBusinessClassType__c</fullName>
    <label>pyjamasSizeBusinessClassType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>