force-app/main/default/objects/QCC_Loyalty_Status__e/fields/pyjamasSizeFirstClassType__c.field-meta.xml
<CustomField>
    <fullName>pyjamasSizeFirstClassType__c</fullName>
    <label>pyjamasSizeFirstClassType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>