force-app/main/default/objects/QCC_Loyalty_Status__e/fields/rewardsNotificationPreference__c.field-meta.xml
<CustomField>
    <fullName>rewardsNotificationPreference__c</fullName>
    <label>Rewards Notification Preference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>