force-app/main/default/objects/QCC_Loyalty_Status__e/fields/rugbyLeagueTeams__c.field-meta.xml
<CustomField>
    <fullName>rugbyLeagueTeams__c</fullName>
    <label>Rugby League Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>