force-app/main/default/objects/QCC_Loyalty_Status__e/fields/salutation__c.field-meta.xml
<CustomField>
    <fullName>salutation__c</fullName>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>