force-app/main/default/objects/QCC_Loyalty_Status__e/fields/seatPreferenceDomestic__c.field-meta.xml
<CustomField>
    <fullName>seatPreferenceDomestic__c</fullName>
    <label>Seat Preference Domestic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>