force-app/main/default/objects/QCC_Loyalty_Status__e/fields/seatPreferenceInternational__c.field-meta.xml
<CustomField>
    <fullName>seatPreferenceInternational__c</fullName>
    <label>Seat Preference International</label>
    <length>255</length>
    <type>Text</type>
</CustomField>