force-app/main/default/objects/QCC_Loyalty_Status__e/fields/statusCreditsQantas__c.field-meta.xml
<CustomField>
    <fullName>statusCreditsQantas__c</fullName>
    <label>Status Credits Qantas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>