force-app/main/default/objects/QCC_Loyalty_Status__e/fields/superRugbyTeams__c.field-meta.xml
<CustomField>
    <fullName>superRugbyTeams__c</fullName>
    <label>Super Rugby Teams</label>
    <length>255</length>
    <type>Text</type>
</CustomField>