force-app/main/default/objects/QCC_Loyalty_Status__e/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>